--- a/whirlwind/CMakeLists.txt
+++ b/whirlwind/CMakeLists.txt
@@ -11,7 +11,8 @@ set(CMAKE_C_FLAGS "-std=c99")
 set (LIB_SOURCE  
 	${PROJECT_SOURCE_DIR}/cipherConf.c
 	${PROJECT_SOURCE_DIR}/cipherCore.c
-	${PROJECT_SOURCE_DIR}/cipherAddon.c)
+	${PROJECT_SOURCE_DIR}/cipherAddon.c
+	${PROJECT_SOURCE_DIR}/cipherSupport.c)
                                 
 include_directories("${PROJECT_BINARY_DIR}")
 include_directories("${PROJECT_INCLUDE_DIR}")
